add project title in Project, with NotEmptyString and string validator and tests